# solfuzz-agave

./: .gitignore  Cargo.toml  Cargo_local.toml.bak  Makefile  README.md  build.rs  docker  solfuzz_agave.toml
.github/workflows/: build-common.yml  build-merge.yml  on_agavev2.1.0_push.yml  on_agavev2.1.3_push.yml
macro/: Cargo.toml
macro/src/: lib.rs
scripts/: build_core_bpf.sh  fetch_program.sh  generate_cargo.py  run_test_vectors.sh
src/: elf_loader.rs  lib.rs  pack.rs  txn_fuzzer.rs  vm_cpi_syscall.rs  vm_interp.rs  vm_syscalls.rs  vm_validate.rs
src/utils/vm/: err_map.rs
tests/: txn_fuzzer_sanity.rs
