[package]
name = "solfuzz-agave"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# We point deps to firedancer-io/agave fork's `solfuzz-agave-vX.X-patches` branch
# This branch is based on the agave branch we are tracking and contains patches to make fuzzing easier
# Refer to https://github.com/firedancer-io/agave/blob/agave-v2.1.3-patches/SOLFUZZ_README.md
# for details on how to manage this branch
[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.2", features = ["derive"] }
lazy_static = "1.4.0"
prost = "0.13.1"
prost-types = "0.13.1"
libc = "0.2.155"
solana-address-lookup-table-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-accounts-db = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-bpf-loader-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-compute-budget = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-compute-budget-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-config-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-ledger = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-loader-v4-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-log-collector = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-program-runtime = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-runtime = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab", features = ["dev-context-only-utils"] }
solana-stake-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-system-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-svm = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-svm-transaction = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-sdk = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-timings = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-vote-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-zk-sdk = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-zk-elgamal-proof-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-poseidon = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-runtime-transaction = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solfuzz-agave-macro = { path = "macro" }
thiserror = "1.0.65"

[build-dependencies]
prost-build = "0.13.1"


[patch.crates-io]
solana-program = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }
solana-zk-token-sdk = { git = "https://github.com/firedancer-io/agave", rev = "f5cde2a07d8276b0839051a9cb243234e43beaab" }

[features]
# This feature is used to compile a target with a builtin replaced by a BPF program.
# Requires the `CORE_BPF_PROGRAM_ID` and `CORE_BPF_TARGET` environment variables.
core-bpf = []
# Same as the `core-bpf` feature, but also includes special-casing required for
# conformance testing a BPF program against a builtin.
core-bpf-conformance = []
# This feature is used to stub out certain parts of the agave runtime for fuzzing
stub-agave = ["solana-program-runtime/stub-proc-instr"]
