[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"

[patch.crates-io]
# for details, see https://github.com/anza-xyz/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }

# We include the following crates as our dependencies above from crates.io:
#
#  * spl-associated-token-account
#  * spl-instruction-padding
#  * spl-memo
#  * spl-pod
#  * spl-token
#  * spl-token-2022
#  * spl-token-metadata-interface
#
# They, in turn, depend on a number of crates that we also include directly
# using `path` specifications.  For example, `spl-token` depends on
# `solana-program`.  And we explicitly specify `solana-program` above as a local
# path dependency:
#
#     solana-program = { path = "../../sdk/program", version = "=1.16.0" }
#
# Unfortunately, Cargo will try to resolve the `spl-token` `solana-program`
# dependency only using what is available on crates.io.  Crates.io normally
# contains a previous version of these crates, and we end up with two versions
# of `solana-program` and `solana-zk-token-sdk` and all of their dependencies in
# our build tree.
#
# If you are developing downstream using non-crates-io solana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p solana-program` and/or `cargo update
# -p solana-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
#
# There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both
# comments and the overrides in sync.
solana-curve25519 = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-zk-sdk = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-zk-token-sdk = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

# Solana RPC nodes experience stalls when running with `tokio` containing this
# commit:
# https://github.com/tokio-rs/tokio/commit/4eed411519783ef6f58cbf74f886f91142b5cfa6
#
# Tokio maintainers believe performance degradation is due to application bugs:
# https://github.com/tokio-rs/tokio/issues/4873#issuecomment-1198277677
#
# This may indeed be true of the code in this monorepo, but we haven't yet
# identified the bug or a way to fix. As a stopgap, this patches `tokio` to the
# tagged version specified above with commit `4eed411` reverted.
#
# Comparison:
# https://github.com/tokio-rs/tokio/compare/tokio-1.29.1...solana-labs:solana-tokio:tokio-1.29.1-revert-4eed411
#
[patch.crates-io.tokio]
git = "https://github.com/anza-xyz/solana-tokio.git"
rev = "7cf47705faacf7bf0e43e4131a5377b3291fce21"

[package]
name = "solfuzz-agave"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]


[dependencies]
Inflector = "0.11.4"
agave-transaction-view = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
aquamarine = "0.3.3"
aes-gcm-siv = "0.11.1"
ahash = "0.8.11"
anyhow = "1.0.91"
arbitrary = "1.3.2"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.9"
arrayvec = "0.7.6"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.9.0"
async-lock = "3.4.0"
async-trait = "0.1.83"
atty = "0.2.11"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = { version = "2.6.0" }
blake3 = "1.5.4"
borsh = { version = "1.5.1", features = ["derive", "unstable__schema"] }
borsh0-10 = { package = "borsh", version = "0.10.3" }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
byte-unit = "4.0.19"
bytecount = "0.6.8"
bytemuck = "1.19.0"
bytemuck_derive = "1.8.0"
byteorder = "1.5.0"
bytes = "1.8"
bzip2 = "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cfg_eval = "0.1.2"
chrono = { version = "0.4.38", default-features = false }
chrono-humanize = "0.2.3"
clap = { version = "4.5.2", features = ["derive"] }
console = "0.15.8"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.33"
core_affinity = "0.5.10"
criterion = "0.5.1"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.13"
csv = "1.3.0"
ctrlc = "3.4.5"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
dashmap = "5.5.3"
derivation-path = { version = "0.2.0", default-features = false }
derivative = "2.2.0"
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
enum-iterator = "1.5.0"
env_logger = "0.9.3"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
flate2 = "1.0.31"
five8_const = "0.1.3"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.29"
gag = "1.0.0"
generic-array = { version = "0.14.7", default-features = false }
gethostname = "0.2.3"
getrandom = "0.2.10"
goauth = "0.13.1"
governor = "0.6.3"
hex = "0.4.3"
hidapi = { version = "2.6.3", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.12"
humantime = "2.0.1"
hyper = "0.14.31"
hyper-proxy = "0.9.1"
im = "15.1.0"
index_list = "0.2.13"
indexmap = "2.6.0"
indicatif = "0.17.8"
itertools = "0.12.1"
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
js-sys = "0.3.72"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
lazy-lru = "0.1.3"
lazy_static = "1.5.0"
libc = "0.2.161"
libloading = "0.7.4"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context",
] }
light-poseidon = "0.2.0"
log = "0.4.22"
lru = "0.7.7"
lz4 = "1.28.0"
memmap2 = "0.5.10"
memoffset = "0.9"
merlin = "3"
min-max-heap = "1.3.0"
mockall = "0.11.4"
modular-bitfield = "0.11.2"
nix = "0.29.0"
num-bigint = "0.4.6"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.16.0"
num_enum = "0.7.3"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
predicates = "2.1"
pretty-hex = "0.3.0"
prio-graph = "0.3.0"
proc-macro2 = "1.0.89"
proptest = "1.5"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.11.6"
quinn-proto = "0.11.9"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
reed-solomon-erasure = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.11.27", default-features = false }
reqwest-middleware = "0.2.5"
rolling-file = "0.2.0"
rpassword = "7.3"
rustls = { version = "0.23.15", default-features = false }
scopeguard = "1.2.0"
semver = "1.0.23"
seqlock = "0.2.0"
serde = "1.0.213" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_bytes = "0.11.15"
serde_derive = "1.0.213" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.132"
serde_with = { version = "3.11.0", default-features = false }
serde_yaml = "0.9.34"
serial_test = "2.0.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
shuttle = "0.7.1"
signal-hook = "0.3.17"
siphasher = "0.3.11"
smallvec = "1.13.2"
smpl_jwt = "0.7.1"
socket2 = "0.5.7"
soketto = "0.7"
solana-account = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-account-decoder = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-account-decoder-client-types = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-account-info = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-accounts-db = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-address-lookup-table-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-atomic-u64 = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-banks-client = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-banks-interface = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-banks-server = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-bench-tps = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-bincode = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-bloom = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-bn254 = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-borsh = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-bpf-loader-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-bucket-map = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-builtins-default-costs = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
agave-cargo-registry = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-clap-utils = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-clap-v3-utils = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-cli = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-cli-config = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-cli-output = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-client = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-clock = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-compute-budget = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-compute-budget-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-config-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-connection-cache = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-core = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-cost-model = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-cpi = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-curve25519 = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-decode-error = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-define-syscall = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-derivation-path = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-download-utils = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-entry = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-program-entrypoint = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-epoch-schedule = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-faucet = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-feature-set = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-fee-calculator = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-fee = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-frozen-abi = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-frozen-abi-macro = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-tps-client = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-genesis = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-genesis-utils = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
agave-geyser-plugin-interface = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-geyser-plugin-manager = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-gossip = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-hash = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-inflation = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-inline-spl = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-instruction = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-last-restart-slot = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-lattice-hash = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-ledger = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-loader-v4-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-local-cluster = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-log-collector = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-logger = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-measure = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-merkle-tree = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-metrics = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-msg = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-native-token = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-net-utils = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-nohash-hasher = "0.2.1"
solana-notifier = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-package-metadata = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-package-metadata-macro = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-packet = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-perf = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-poh = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-poseidon = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-precompile-error = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-program-error = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-program-memory = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-program-option = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-program-pack = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-program-runtime = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-program-test = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-pubkey = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-pubsub-client = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-quic-client = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-rayon-threadlimit = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-remote-wallet = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-rent = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-sanitize = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-secp256r1-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-serde-varint = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-serialize-utils = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-sha256-hasher = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-signature = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-slot-hashes = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-slot-history = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-timings = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-unified-scheduler-logic = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-unified-scheduler-pool = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-rpc = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-rpc-client = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-rpc-client-api = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-rpc-client-nonce-utils = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-runtime = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-runtime-transaction = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-sdk = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-sdk-macro = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-secp256k1-recover = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-send-transaction-service = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-short-vec = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-stable-layout = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-stake-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-storage-bigtable = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-storage-proto = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-streamer = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-svm = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-svm-conformance = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-svm-example-paytube = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-svm-rent-collector = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-svm-transaction = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-system-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-sysvar-id = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-test-validator = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-thin-client = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-transaction-error = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-tpu-client = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-transaction-status = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-transaction-status-client-types = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-transaction-metrics-tracker = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-turbine = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-type-overrides = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-udp-client = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-version = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-vote = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-vote-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-wen-restart = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-zk-elgamal-proof-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-zk-keygen = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-zk-sdk = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-zk-token-proof-program = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana-zk-token-sdk = {git = "https://github.com/firedancer-io/agave", rev = "133d691"}
solana_rbpf = { git = "https://github.com/solana-labs/rbpf", rev = "410a627" }
spl-associated-token-account = "=4.0.0"
spl-instruction-padding = "0.2"
spl-memo = "=5.0.0"
spl-pod = "=0.3.0"
spl-token = "=6.0.0"
spl-token-2022 = "=4.0.0"
spl-token-group-interface = "=0.3.0"
spl-token-metadata-interface = "=0.4.0"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.6.1"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.3"
tar = "0.4.42"
tarpc = "0.29.0"
tempfile = "3.13.0"
test-case = "3.3.1"
thiserror = "1.0.65"
tiny-bip39 = "0.8.2"
# Update solana-tokio patch below when updating this version
tokio = "1.29.1"
tokio-serde = "0.8"
tokio-stream = "0.1.16"
tokio-tungstenite = "0.20.1"
tokio-util = "0.7"
toml = "0.8.12"
tonic = "0.9.2"
tonic-build = "0.9.2"
trees = "0.4.2"
tungstenite = "0.20.1"
uriparse = "0.6.4"
url = "2.5.2"
vec_extract_if_polyfill = "0.1.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
x509-parser = "0.14.0"
# See "zeroize versioning issues" below if you are updating this version.
zeroize = { version = "1.7", default-features = false }
zstd = "0.13.2"
solfuzz-agave-macro = { path = "macro" }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
prost-build = "0.13.1"

[features]
core-bpf = []
core-bpf-conformance = []
stub-agave = ["solana-program-runtime/stub-proc-instr"]
