[package]
name = "solfuzz-agave-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
solana-sdk = { git = "https://github.com/firedancer-io/agave", rev = "b641c6e050d759e41dd7d794c3d0a12638c11800" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
