[package]
name = "solfuzz-agave-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1.0"
solana-sdk = { git = "https://github.com/firedancer-io/agave", rev = "66ea0a11f2f77086d33253b4028f6ae7083d78e4" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
